--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
